# Learning_Robot_Arm_In_1_Month

./: README.md  README.old.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/my_panda_interfaces/msg/: TaskStatus.msg
src/my_panda_interfaces/srv/: IKSolve.srv  (+3 more)
src/my_panda_sim/: package.xml  setup.cfg  setup.py
src/my_panda_sim/launch/: display.launch.py  run.launch.py
src/my_panda_sim/my_panda_sim/: MatrixChain.py  Trajectory Generator.py  Trajectory_Generator.py  Trajectory_Generator_v2.py  collision_checker_v2.py  cube_demo.py  cube_demo_copy.py  day15_test_trajectory_Generator.py  day16_test_trajectory_Generator_v2.py  day17_test_executor.py  day17_test_executor_v3.py  day18_test_CollisionTracker.py  day21_test_task_scheduler.py  day5_ROS2_joint_state_publisher.py  day8_test_fk.py  day9_test_matrix_chain.py  executor_v2.py  executor_v3.py  executor_v4.py  fk_publisher.py  fk_solver.py  gripper.py  gui_control.py  ik_solver.py  ik_solver_v2.py  run_node.py  show.py  task_scheduler_v2.py  test.py  test_fk.py  test_presolve.py  test_trajectory_Generator_v2.py  trajectory_generator_v3.py  utils.py
src/my_panda_sim/my_panda_sim/old_file/: CollisionTracker.py  collision_checker_v2.py  cube_demo_copy.py  day12_test_ik_solver_v2.py  day16_test_trajectory_Generator_v2.py  day17_test_executor_v2.py  day17_test_executor_v3.py  day21_demo_scheduler_v2.py  day4_sim_node.py  day5_ROS2_joint_state_publisher.py  day5_joint_test.py  demo.py  executor.py  fk_publisher.py  fk_solver.py  test_ik_solver_v2_with_trajectory.py
src/my_panda_sim/rviz/: display.rviz
(+7 files in other folders)
