<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_panda_sim</name>
  <version>0.0.0</version>
  <description>Panda pick and place simulation with ROS2 and PyBullet</description>

  <maintainer email="arthur@todo.todo">arthur</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>my_panda_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
